Minor content update

--- a/public/app-development.html
+++ b/public/app-development.html
@@ -251,7 +251,7 @@
               <div class="action-card" data-aos="zoom-in" data-aos-delay="100">
                 <h3>Ready to Build With Us?</h3>
                 <p>Get a free consultation with our digital experts and discover how we can help grow your business.</p>
-                <a href="mailto:qimlab.official@gmail.com" class="btn-primary">Contact Us</a>
+                <a href="https://calendar.app.google/FohrsZaGH5dCu4sF9" class="btn-primary">Request Consultation</a>
                 <span class="guarantee"><i class="bi bi-shield-check"></i> 100% Satisfaction Guarantee</span>
               </div>
               
