--- a/public/object/footer.html
+++ b/public/object/footer.html
@@ -37,7 +37,7 @@
             <li><a href="about.html#collaboration">Collaboration</a></li>
             <li><a href="about.html#careers">Careers</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="quotation.html">Get Quotation</a></li>
+           
           </ul>
         </div>
         
@@ -46,14 +46,15 @@
           <h4>Contact Us</h4>
           <p><strong>Email:</strong> <a href="mailto:qimlab.official@gmail.com">qimlab.official@gmail.com</a></p>
           <p><strong>Location:</strong> <span>Selangor, Malaysia</span></p>
+          <a href="https://calendar.app.google/FohrsZaGH5dCu4sF9">REQUEST FREE CONSULTATION</a></p>
         </div>
 
       </div>
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Qim Lab</strong> <span>by Perusahaan Tiga H |  All Rights Reserved</span></p>
+      <p>©<strong class="px-1 sitename">Qim Lab</strong><span>by Perusahaan Tiga H. All Rights Reserved</span></p>
       <p>( 202403001610 | MA0310323-V )</span></p>
-      <p><a href="">Privacy</a></span> | </span><a href="">Terms</a></p>
+      <p><a href="">Privacy </a></span>  |  </span><a href="">Terms</a></p>
     </div>
   </footer>
