feat: Implement initial website structure with homepage, navigation, and core assets.

--- a/public/about.html
+++ b/public/about.html
@@ -203,13 +203,13 @@
                         <div class="absolute inset-0 bg-brand-accent/10 mix-blend-overlay"></div>
                         <!-- Placeholder for abstract tech image -->
                         <div class="w-full h-full flex items-center justify-center bg-brand-subtle">
-                            <i data-lucide="layers"
-                                class="w-32 h-32 text-white/20 group-hover:text-brand-accent/50 transition-colors duration-500"></i>
+                            <img src="assets/img/about/about-portrait-1.webp" alt="About Qim Lab"
+                                class="w-full h-full object-cover object-center group-hover:scale-105 transition-transform duration-500">
                         </div>
                         <!-- Floating Badge -->
                         <div
                             class="absolute bottom-8 right-8 bg-brand-accent text-black px-6 py-4 font-bold font-mono rounded-sm shadow-[0_0_20px_rgba(0,240,255,0.4)]">
-                            EST. 2024
+                            EST. 2023
                         </div>
                     </div>
                 </div>
@@ -228,11 +228,11 @@
 
                     <div class="grid grid-cols-2 gap-8 mb-8">
                         <div>
-                            <div class="text-3xl font-bold text-brand-accent counter" data-target="50">0</div>
+                            <div class="text-3xl font-bold text-brand-accent counter" data-target="11">0</div>
                             <div class="text-sm text-gray-500 font-mono mt-1">PROJECTS DEPLOYED</div>
                         </div>
                         <div>
-                            <div class="text-3xl font-bold text-brand-accent counter" data-target="100">0</div>
+                            <div class="text-3xl font-bold text-brand-accent counter" data-target="99.9999">0</div>
                             <div class="text-sm text-gray-500 font-mono mt-1">% CLIENT SATISFACTION</div>
                         </div>
                     </div>
@@ -262,12 +262,10 @@
                         <div
                             class="aspect-[3/4] bg-brand-subtle rounded-lg overflow-hidden border border-white/5 relative mb-4">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent z-10"></div>
-                            <!-- Placeholder/Abstract Avatar -->
-                            <div
-                                class="w-full h-full flex items-center justify-center bg-gray-900 group-hover:bg-gray-800 transition-colors">
-                                <i data-lucide="user"
-                                    class="w-20 h-20 text-gray-600 group-hover:text-brand-accent transition-colors"></i>
-                            </div>
+
+                            <!-- Profile Picture -->
+                            <img src="assets/img/about/team-haqim.webp" alt="Haqim Haslee"
+                                class="w-full h-full object-cover object-center group-hover:scale-105 transition-transform duration-500">
 
                             <div
                                 class="absolute bottom-0 left-0 p-6 z-20 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
@@ -278,22 +276,19 @@
                         </div>
                     </div>
 
-
-
-                    <!-- Team Member 4 -->
+                    <!-- Team Member 2 -->
                     <div class="group relative">
                         <div
                             class="aspect-[3/4] bg-brand-subtle rounded-lg overflow-hidden border border-white/5 relative mb-4">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent z-10"></div>
-                            <div
-                                class="w-full h-full flex items-center justify-center bg-gray-900 group-hover:bg-gray-800 transition-colors">
-                                <i data-lucide="palette"
-                                    class="w-20 h-20 text-gray-600 group-hover:text-brand-accent transition-colors"></i>
-                            </div>
+                            <!-- Profile Picture -->
+                            <img src="assets/img/about/team-unknown.webp" alt="Unknown"
+                                class="w-full h-full object-cover object-center group-hover:scale-105 transition-transform duration-500">
+
                             <div
                                 class="absolute bottom-0 left-0 p-6 z-20 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
-                                <h3 class="text-xl font-bold text-white mb-1">Elena Rodriguez</h3>
-                                <p class="text-brand-accent font-mono text-xs tracking-wider">CREATIVE DIRECTOR</p>
+                                <h3 class="text-xl font-bold text-white mb-1">Unknown</h3>
+                                <p class="text-brand-accent font-mono text-xs tracking-wider">MARKETING DIRECTOR</p>
                             </div>
                         </div>
                     </div>
@@ -436,19 +431,19 @@
                 </p>
 
                 <div class="flex flex-col md:flex-row gap-6 justify-center">
-                    <a href="mailto:hello@qimlab.com"
+                    <a href="https://cal.com/qim-lab"
                         class="hover-trigger group px-10 py-5 bg-white text-black font-bold tracking-wide rounded-sm hover:bg-brand-accent transition-colors">
                         <span class="flex items-center gap-2">
-                            <i data-lucide="calendar-days"></i> GET CONSULTATION
+                            <i data-lucide="calendar-days"></i> FREE CONSULTATION
                         </span>
                     </a>
-                    <a href="mailto:hello@qimlab.com" target="_blank"
+                    <a href="mailto:qimlab.official@gmail.com" target="_blank"
                         class="hover-trigger group px-10 py-5 border border-white/20 text-white font-bold tracking-wide rounded-sm hover:border-brand-accent hover:text-brand-accent transition-colors">
                         <span class="flex items-center gap-2">
                             <i data-lucide="mail"></i> EMAIL
                         </span>
                     </a>
-                    <a href="https://wa.me/601112345678" target="_blank"
+                    <a href="https://wa.me/60105044177" target="_blank"
                         class="hover-trigger group px-10 py-5 border border-white/20 text-white font-bold tracking-wide rounded-sm hover:border-brand-accent hover:text-brand-accent transition-colors">
                         <span class="flex items-center gap-2">
                             <i data-lucide="message-circle"></i> WHATSAPP
