feat: Add initial HTML structure for the home, projects, project detail, and about pages.

--- a/public/index.html
+++ b/public/index.html
@@ -346,16 +346,17 @@
     <!-- Why Choose Us -->
     <section class="py-24 relative border-y border-white/5 bg-black/40 backdrop-blur-sm">
         <div class="container mx-auto px-6">
-            <div class="text-center mb-16 relative">
-                <div
-                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-32 h-32 bg-brand-accent/5 rounded-full blur-3xl -z-10">
+
+            <div class="flex flex-col md:flex-row justify-between items-end mb-20">
+                <div>
+                    <h2 class="text-4xl md:text-5xl font-bold mb-4">WHY CHOOSE US</h2>
+                    <div class="h-1 w-20 bg-brand-accent"></div>
                 </div>
-                <h2 class="text-3xl md:text-4xl font-bold mb-4 tracking-tight">WHY CHOOSE US</h2>
-                <div class="h-1 w-20 bg-brand-accent mx-auto"></div>
-                <p class="text-gray-400 mt-6 max-w-2xl mx-auto text-sm font-mono uppercase tracking-widest">
+                <p class="text-gray-400 max-w-md text-right mt-6 md:mt-0 font-mono text-sm">
                     // EXCELLENCE IN EVERY LINE OF CODE
                 </p>
             </div>
+
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Feature 1 -->
@@ -422,29 +423,6 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <!-- Testimonials Section -->
-    <section class="py-32 relative overflow-hidden bg-gradient-to-b from-transparent to-black/40">
-        <!-- Glow Effect -->
-        <div
-            class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[600px] h-[400px] bg-brand-accent/5 rounded-full blur-[100px] pointer-events-none">
-        </div>
-
-        <div class="container mx-auto px-6 mb-16 relative z-10">
-            <div class="flex flex-col md:flex-row justify-between items-end">
-                <div>
-                    <h2 class="text-4xl md:text-5xl font-bold mb-4">TESTIMONIALS</h2>
-                    <div class="h-1 w-20 bg-brand-accent"></div>
-                </div>
-                <p class="text-gray-400 max-w-md text-right mt-6 md:mt-0 font-mono text-sm uppercase tracking-widest">
-                    // CLIENT SUCCESS STORIES<br>
-                    // TRUSTED PARTNERSHIPS
-                </p>
-            </div>
-        </div>
-
-        <!-- Carousel Wrapper -->
         <div id="testimonial-wrapper" class="relative w-full overflow-hidden py-10 cursor-ew-resize group">
             <!-- Fade edges -->
             <div
@@ -460,6 +438,8 @@
             </div>
         </div>
     </section>
+
+
 
     <!-- How We Work Section -->
     <section id="how-we-work" class="py-32 relative">
