--- a/public/project-detail.html
+++ b/public/project-detail.html
@@ -408,7 +408,7 @@
                              <div class="p-6 rounded-2xl bg-brand-subtle border border-white/10">
                                 <h3 class="text-lg font-bold mb-4 font-mono text-brand-accent">INTERESTED?</h3>
                                 <p class="text-gray-400 text-sm mb-6">Need a similar solution for your business? Let's discuss how we can help you.</p>
-                                <a href="mailto:contact@qimlab.com" class="inline-flex items-center gap-2 text-white hover:text-brand-accent transition-colors font-bold text-sm tracking-widest hover-trigger">
+                                <a href="mailto:qimlab.official@gmail.com" class="inline-flex items-center gap-2 text-white hover:text-brand-accent transition-colors font-bold text-sm tracking-widest hover-trigger">
                                     START A CONVERSATION <i data-lucide="arrow-right" class="w-4 h-4"></i>
                                 </a>
                             </div>
