--- a/public/projects.html
+++ b/public/projects.html
@@ -218,7 +218,7 @@
                 <!-- CTA -->
                 <div class="mt-20 text-center">
                     <h2 class="text-2xl font-bold mb-6">HAVE A PROJECT IN MIND?</h2>
-                    <a href="mailto:contact@qimlab.com"
+                    <a href="mailto:qimlab.official@gmail.com"
                         class="hover-trigger inline-block bg-white text-black px-10 py-4 font-bold rounded-full hover:bg-brand-accent transition-colors hover:shadow-[0_0_30px_rgba(0,240,255,0.5)]">
                         LET'S TALK
                     </a>
