--- a/public/about.html
+++ b/public/about.html
@@ -339,7 +339,7 @@
                             </div>
                         </div>
 
-                        <a href="mailto:collaboration@qimlab.com"
+                        <a href="mailto:qimlab.official@gmail.com"
                             class="inline-flex items-center gap-2 mt-10 px-8 py-4 bg-white/5 border border-white/10 hover:bg-brand-accent hover:text-black hover:border-brand-accent transition-all rounded-sm font-mono text-sm hover-trigger">
                             BECOME A PARTNER <i data-lucide="arrow-up-right" class="w-4 h-4"></i>
                         </a>
